bug-squish: fixed add button for books-to-read

--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ font-style: italic;
 
 .header-text {
 font-size: 2.8vw;
-color: var(--blue-purple);
 }
 
 .container.books-text {
